@@ -109,8 +109,8 @@ extern "C"
 #define POLDIFF_DIFF_TEMEMBER      0x02000000U
 #define POLDIFF_DIFF_TETRANS       0x04000000U
 
-#define POLDIFF_DIFF_TERULES_COMPAT 0x00000400U  /*< deprecated */
-#define POLDIFF_DIFF_AVRULES_COMPAT 0x00000200U  /*< deprecated */
+#define POLDIFF_DIFF_TERULES_COMPAT 0x00000400U	/*< deprecated */
+#define POLDIFF_DIFF_AVRULES_COMPAT 0x00000200U	/*< deprecated */
 
 #define POLDIFF_DIFF_AVRULES     (POLDIFF_DIFF_AVALLOW | POLDIFF_DIFF_AVNEVERALLOW | POLDIFF_DIFF_AVAUDITALLOW | POLDIFF_DIFF_AVDONTAUDIT)
 #define POLDIFF_DIFF_TERULES     (POLDIFF_DIFF_TEMEMBER | POLDIFF_DIFF_TECHANGE | POLDIFF_DIFF_TETRANS)
